--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ install:
 
  
 after_success:
-  - test $TRAVIS_BRANCH = "master" && conda install conda-build && conda install anaconda-client && bash conda/conda_upload.sh 
+  - test $TRAVIS_BRANCH = "master" && conda install conda-build && conda install anaconda-client && bash recipes/conda_upload.sh 
