--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,28 @@
 # The language in this case has no bearing - we are going to be making use of conda.
 language: generic
 
-matrix:
-  include:
-    - os: osx
-      osx_image: xcode9.1
-      env:
-        - MATRIX_EVAL=""
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
-      env:
-         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9" 
+os: osx
+osx_image: xcode9.1
+compuler: clang
 
-before_install:
-    - eval "${MATRIX_EVAL}"
+#matrix:
+#  include:
+#    - os: osx
+#      osx_image: xcode9.1
+#      env:
+#        - MATRIX_EVAL=""
+#    - os: linux
+#      addons:
+#        apt:
+#          sources:
+#            - ubuntu-toolchain-r-test
+#          packages:
+#            - g++-4.9
+#      env:
+#         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9" 
+
+#before_install:
+#    - eval "${MATRIX_EVAL}"
 
 install:
   - if ! [[ -d $HOME/miniconda ]]; then
