--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,40 @@
 #Lannguage in this case has no bearing - we are going to be making use of conda.
 language: generic
 
-os: osx
-osx_image: xcode9.1
+matrix:
+  include:
+    - os: linux
+      addons:
+        apt:
+          source:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env:
+        - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+    - os: osx
+      osx_image: xcode9.1
+      sudo: false
+      compiler:
+        - clang
 
-sudo: false
-
-compiler:
-  - clang
+before_install:
+  - if [ "${TRAVIS_OS_NAME}" == "linux"]; then
+      eval "${MATRIX_EVAL}"
+    fi
 
 install:
-  - curl -o miniconda.sh  https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
+  # Pull the correct conda for the build system
+  - if [ "${TRAVIS_OS_NAME}" == "linux"]; then
+      wget -O miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
+    elif [ "${TRAVIS_OS_NAME}" == "osx"]; then
+      curl -o miniconda.sh  https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
+    fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
 
- 
 after_success:
-  - test $TRAVIS_BRANCH = "master" && conda install conda-build && conda install anaconda-client && bash recipes/conda_upload.sh 
-
+  - test $TRAVIS_BRANCH = "master" && conda install conda-build && conda install anaconda-client && bash recipes/conda_upload.sh
