--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,13 @@ matrix:
 
 before_install:
   - if [ "${TRAVIS_OS_NAME}" == "linux"]; then
-      eval "${MATRIX_EVAL}"
+      eval "${MATRIX_EVAL}";
     fi
 
 install:
   # Pull the correct conda for the build system
   - if [ "${TRAVIS_OS_NAME}" == "linux"]; then
-      wget -O miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
+      wget -O miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh;
     elif [ "${TRAVIS_OS_NAME}" == "osx"]; then
       curl -o miniconda.sh  https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh;
     fi
