--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ configuration:
   - Release
 
 install:
-  - cmd: call C:\\Miniconda36\Scripts\activate.bat
+  - cmd: call C:\\Miniconda36-x64\Scripts\activate.bat
   - cmd: conda config --set always_yes yes --set changeps1 no
   - cmd: conda update -q conda
   - cmd: conda install conda-build anaconda-client
