--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 # Build worker image (VM template)
-image: Visual Studio 2015
+image: Visual Studio 2017
 
 branches:
   only:
@@ -8,7 +8,7 @@ branches:
 version: '3.0.1.{build}'
 
 platform:
-  - x86
+  - x64
 
 configuration:
   - Release
@@ -21,9 +21,6 @@ install:
   - cmd: conda config --set anaconda_upload yes
 
 on_success:
-  - cmd: conda build --token $CONDA_UPLOAD_TOKEN .
+  - cmd: conda build --token $CONDA_UPLOAD_TOKEN recipes
 
 build: off
-
-test_script:
-  - conda build recipes
