Updates build to use version 3.0.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,6 @@ install:
   - conda update -q conda
 
 after_success:
-  - test $TRAVIS_BRANCH = "master" && conda install conda-build && conda install anaconda-client && bash recipes/conda_upload.sh
+  - conda install conda-build anaconda-client
+  - conda config --set anaconda_upload yes
+  - conda build --token $CONDA_UPLOAD_TOKEN .
