--- a/.travis.yml
+++ b/.travis.yml
@@ -9,19 +9,16 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-6
+            - ['g++-6']
       env:
-        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+        - CC=gcc-6
+        - CXX=g++-6
     - os: osx
       osx_image: xcode9.1
       sudo: false
       compiler:
         - clang
 
-before_install:
-  - if [ "${TRAVIS_OS_NAME}" == "linux"]; then
-      eval "${MATRIX_EVAL}";
-    fi
 
 install:
   # Pull the correct conda for the build system
