--- a/recipes/meta.yaml
+++ b/recipes/meta.yaml
@@ -12,9 +12,8 @@ build:
   number: 2
   features:
     - vc14  # [win and (py35 or py36)]
-  script_env:
-    - CC  # [linux]
-    - CXX  # [linux]
+
+detect_binary_files_with_prefix: true
 
 requirements:
   build:
