--- a/recipes/meta.yaml
+++ b/recipes/meta.yaml
@@ -19,9 +19,10 @@ requirements:
   build:
     - python  # [win]
     - vc 14  # [win and (py35 or py36)]
+    - {{ compiler('cxx') }}
   run:
     - vc  # [win and (py35 or py36)]
-
+    
 test:
   commands:
     - test -e $PREFIX/lib/libcsmapi.so  # [linux]
